Revert "fix: some favicons stretch in hyperlink modal"
This reverts commit e78e9ce68908bf1fb0e3820f6c3435baa68d50ff.

--- a/static/css/link.css
+++ b/static/css/link.css
@@ -91,8 +91,8 @@
     padding-top:12px
   }
   #ep_hyperlink_img{
-    max-width: 20px;
-    max-height: 20px;
+    width: 20px;
+    height: 20px;
     margin-right: 4px;
     float: left;
     display: none;
